--- a/index.html
+++ b/index.html
@@ -9,245 +9,67 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
+
+  <!-- HEADER -->
   <header class="uf-header">
     <div class="uf-container uf-header-inner">
       <div class="uf-logo">
-        <!-- Qui puoi sostituire con l'immagine del logo -->
         <span class="uf-logo-gradient">UniFlow</span>
       </div>
+
       <nav class="uf-nav">
         <a href="#tools">Tool</a>
-        <a href="#tests">Test virali</a>
-        <a href="#content">Contenuti</a>
-        <a href="#shop">Prodotti</a>
+        <a href="#media">Calcolatore Media</a>
+        <a href="#tests">Test</a>
         <a href="#premium">Premium</a>
       </nav>
-      <div class="uf-header-cta">
-        <a href="#premium" class="btn-outline">Premium</a>
-        <a href="#hero" class="btn-primary">Inizia ora</a>
-      </div>
     </div>
   </header>
 
-  <main>
-    <!-- HERO -->
-    <section id="hero" class="uf-hero">
-      <div class="uf-container uf-hero-grid">
-        <div class="uf-hero-text">
-          <h1>L’università, ma con più flow.</h1>
-          <p>
-            Organizzati meglio, studia più smart e sopravvivi alla sessione con stile, ironia e strumenti virali.
-          </p>
-          <div class="uf-hero-cta">
-            <a href="#tools" class="btn-primary">Scopri i tool</a>
-            <a href="#tests" class="btn-ghost">Fai un test virale</a>
-          </div>
-          <p class="uf-hero-sub">
-            Il posto dove la produttività incontra il meme, e ogni studente trova il suo flow.
-          </p>
-        </div>
-        <div class="uf-hero-visual">
-          <div class="uf-card uf-card-glow">
-            <h3>XP Sessione</h3>
-            <p>+120 oggi · Continua così 👀</p>
-          </div>
-          <div class="uf-card uf-card-pill">
-            <span>🔥 Tool attivi</span>
-            <strong>Calcolatore media · Piano di studio · Flashcard</strong>
-          </div>
-          <div class="uf-avatar-badge">
-            <div class="uf-avatar-circle"></div>
-            <span>“Sto studiando… forse.”</span>
-          </div>
-        </div>
-      </div>
-    </section>
+  <!-- HERO -->
+  <section id="hero" class="uf-hero">
+    <div class="uf-container uf-hero-grid">
+      <div class="uf-hero-text">
+        <h1>L’università, ma con più flow.</h1>
+        <p>Organizzati meglio, studia più smart e sopravvivi alla sessione con stile, ironia e strumenti virali.</p>
 
-    <!-- TOOL -->
-    <section id="tools" class="uf-section">
-      <div class="uf-container">
-        <div class="uf-section-head">
-          <h2>Strumenti intelligenti per studenti intelligenti (o quasi)</h2>
-          <p>Dalla media al piano di studio, fino al generatore di email: tutto quello che ti serve per non impazzire.</p>
-        </div>
-        <div class="uf-grid uf-grid-4">
-          <div class="uf-tool-card">
-            <h3>Calcolatore media universitaria</h3>
-            <p>Capisci subito quanto ti manca alla laurea.</p>
-            <button class="btn-mini" disabled>Presto disponibile</button>
-          </div>
-          <div class="uf-tool-card">
-            <h3>Piano di studio personalizzato</h3>
-            <p>Organizzato in 10 secondi, procrastinato in 2.</p>
-            <button class="btn-mini" disabled>Presto disponibile</button>
-          </div>
-          <div class="uf-tool-card">
-            <h3>Countdown alla sessione</h3>
-            <p>Per ricordarti che il tempo non è tuo amico.</p>
-            <button class="btn-mini" disabled>Presto disponibile</button>
-          </div>
-          <div class="uf-tool-card">
-            <h3>Email universitarie con stile</h3>
-            <p>Formali, educate, ma con personalità.</p>
-            <button class="btn-mini" disabled>Presto disponibile</button>
-          </div>
-          <div class="uf-tool-card">
-            <h3>Quanto vale la tua ansia?</h3>
-            <p>Un test che non vuoi davvero fare.</p>
-            <button class="btn-mini" disabled>Presto disponibile</button>
-          </div>
-          <div class="uf-tool-card">
-            <h3>Generatore mappe mentali</h3>
-            <p>Visuale, rapido, automatico.</p>
-            <button class="btn-mini" disabled>Presto disponibile</button>
-          </div>
-          <div class="uf-tool-card">
-            <h3>Flashcard automatiche</h3>
-            <p>Studia senza sbatti.</p>
-            <button class="btn-mini" disabled>Presto disponibile</button>
-          </div>
-          <div class="uf-tool-card">
-            <h3>Riassuntore intelligente</h3>
-            <p>Capitoli infiniti → idee chiare.</p>
-            <button class="btn-mini" disabled>Presto disponibile</button>
-          </div>
+        <div class="uf-hero-cta">
+          <a href="#tools" class="btn-primary">Scopri i tool</a>
+          <a href="#media" class="btn-ghost">Calcola la tua media</a>
         </div>
       </div>
-    </section>
 
-    <!-- TEST VIRALI -->
-    <section id="tests" class="uf-section uf-section-alt">
-      <div class="uf-container">
-        <div class="uf-section-head">
-          <h2>I test che vedrai ovunque su TikTok</h2>
-          <p>Per ridere, condividere e scoprire chi sei davvero (o chi credi di essere).</p>
-        </div>
-        <div class="uf-grid uf-grid-3">
-          <div class="uf-test-card">
-            <h3>Che tipo di studente sei?</h3>
-            <p>Il classico, il ninja dell’ultimo minuto o il fantasma?</p>
-            <button class="btn-primary btn-full">Fai il test</button>
-          </div>
-          <div class="uf-test-card">
-            <h3>Quanto sopravviveresti alla sessione?</h3>
-            <p>Rispondi e scopri se sei in modalità “hardcore”.</p>
-            <button class="btn-primary btn-full">Fai il test</button>
-          </div>
-          <div class="uf-test-card">
-            <h3>Procrastinatore o produttivo?</h3>
-            <p>La verità che non vuoi sentire.</p>
-            <button class="btn-primary btn-full">Fai il test</button>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTENUTI BREVI -->
-    <section id="content" class="uf-section">
-      <div class="uf-container">
-        <div class="uf-section-head">
-          <h2>Snack content per la tua vita universitaria</h2>
-          <p>Meme, playlist e tecniche di studio senza sbatti.</p>
-        </div>
-        <div class="uf-grid uf-grid-3">
-          <div class="uf-content-card">
-            <span class="tag">Meme</span>
-            <h3>La sessione spiegata con un solo meme</h3>
-            <p>Perché ridere è meglio che piangere.</p>
-          </div>
-          <div class="uf-content-card">
-            <span class="tag">Playlist</span>
-            <h3>Playlist “Focus ma con ansia”</h3>
-            <p>Lo sfondo sonoro perfetto per i tuoi ripassi.</p>
-          </div>
-          <div class="uf-content-card">
-            <span class="tag">Tips</span>
-            <h3>Trucchi per passare esami all’ultimo minuto</h3>
-            <p>Non consigliamo, ma… sappiamo.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- SHOP -->
-    <section id="shop" class="uf-section uf-section-alt">
-      <div class="uf-container">
-        <div class="uf-section-head">
-          <h2>Prodotti estetici per studenti che vogliono fare sul serio</h2>
-          <p>Planner, template e kit per sopravvivere alla sessione con stile.</p>
-        </div>
-        <div class="uf-grid uf-grid-3">
-          <div class="uf-product-card">
-            <h3>Planner estetici</h3>
-            <p>PDF e Notion per organizzare la tua vita universitaria.</p>
-            <span class="price">Da 7,90€</span>
-          </div>
-          <div class="uf-product-card">
-            <h3>Template per appunti</h3>
-            <p>Minimal, puliti, pronti da usare.</p>
-            <span class="price">Da 4,90€</span>
-          </div>
-          <div class="uf-product-card">
-            <h3>Kit “Sessione Perfetta”</h3>
-            <p>Planner + mappe mentali + checklist.</p>
-            <span class="price">Da 14,90€</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- PREMIUM -->
-    <section id="premium" class="uf-section uf-premium">
-      <div class="uf-container uf-premium-inner">
-        <div>
-          <h2>Livello PRO: quando vuoi smettere di sopravvivere e iniziare a dominare</h2>
-          <ul class="uf-premium-list">
-            <li>Piani di studio personalizzati</li>
-            <li>Risultati avanzati dei test</li>
-            <li>Planner intelligente</li>
-            <li>Flashcard illimitate</li>
-            <li>Zero pubblicità</li>
-          </ul>
-        </div>
-        <div class="uf-premium-cta">
-          <p>A partire da <strong>4,99€/mese</strong></p>
-          <a href="#hero" class="btn-primary btn-full">Passa a UniFlow Premium</a>
-          <p class="uf-premium-note">Disdici quando vuoi. Nessun esame richiesto.</p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="uf-footer">
-    <div class="uf-container uf-footer-inner">
-      <div class="uf-footer-brand">
-        <span class="uf-logo-gradient">UniFlow</span>
-        <p>Il tuo alleato digitale per sopravvivere all’università con stile, ironia e intelligenza.</p>
-      </div>
-      <div class="uf-footer-links">
-        <div>
-          <h4>Esplora</h4>
-          <a href="#tools">Tool</a>
-          <a href="#tests">Test virali</a>
-          <a href="#content">Contenuti</a>
-          <a href="#shop">Prodotti</a>
-        </div>
-        <div>
-          <h4>Altro</h4>
-          <a href="#">Blog</a>
-          <a href="#">Privacy</a>
-          <a href="#">Termini</a>
-        </div>
-        <div>
-          <h4>Social</h4>
-          <a href="#">TikTok</a>
-          <a href="#">Instagram</a>
+      <div class="uf-hero-visual">
+        <div class="uf-card uf-card-glow">
+          <h3>XP Sessione</h3>
+          <p>+120 oggi · Continua così 👀</p>
         </div>
       </div>
     </div>
-  </footer>
+  </section>
 
-  <script src="script.js"></script>
-</body>
-</html>
+  <!-- TOOL GRID -->
+  <section id="tools" class="uf-section">
+    <div class="uf-container">
+      <div class="uf-section-head">
+        <h2>Tool UniFlow</h2>
+        <p>Strumenti intelligenti per studenti intelligenti (o quasi).</p>
+      </div>
+
+      <div class="uf-grid uf-grid-3">
+        <div class="uf-tool-card">
+          <h3>Calcolatore Media</h3>
+          <p>La tua media ponderata in tempo reale.</p>
+          <a href="#media" class="btn-mini">Apri</a>
+        </div>
+
+        <div class="uf-tool-card">
+          <h3>Piano di Studio</h3>
+          <p>Organizza gli esami in 10 secondi.</p>
+          <button class="btn-mini" disabled>In arrivo</button>
+        </div>
+
+        <div class="uf-tool-card">
+          <h3>Flashcard Automatiche
